--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- <title>"My App生产模式"</title> -->
   <title>(｡◕‿◕｡)JIMIN</title>
   <script src="https://unpkg.com/css-doodle@0.19.1/css-doodle.min.js"></script>
-  <script src="/src/assets/js/autoplay.js"></script>
+  <script src="assets/js/autoplay.js"></script>
 <script type="module" crossorigin src="/jmbolg/assets/index.7ade8525.js"></script>
   <link rel="modulepreload" href="/jmbolg/assets/vendor.3df798c4.js">
 <link rel="stylesheet" href="/jmbolg/assets/style.b533ae82.css">
