--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   <link rel="icon" href="/jmbolg/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- <title>"My App生产模式"</title> -->
-  <title>(｡◕‿◕｡)JIMIN</title>
+  <title>(｡◕‿◕｡)JIMIN的的的</title>
   <script src="https://unpkg.com/css-doodle@0.19.1/css-doodle.min.js"></script>
-  <script src="/jmbolg/autoplay.js"></script>
-<script type="module" crossorigin src="/jmbolg/assets/index.7ade8525.js"></script>
+<script type="module" crossorigin src="/jmbolg/assets/index.af56b44f.js"></script>
   <link rel="modulepreload" href="/jmbolg/assets/vendor.3df798c4.js">
-<link rel="stylesheet" href="/jmbolg/assets/style.b533ae82.css">
+<link rel="stylesheet" href="/jmbolg/assets/style.00a9c881.css">
 </head>
 
 <body>
